feat: add a parameter on how to account for weights when some ingredients are missing + refactor recipe computation
